; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/fdc/extr_fdc.c_fdc_err.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/fdc/extr_fdc.c_fdc_err.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fdc_data = type { i64, i32 }

@FDC_ERRMAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [39 x i8] c"too many errors, not logging any more\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fdc_data*, i8*)* @fdc_err to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fdc_err(%struct.fdc_data* %0, i8* %1) #0 {
  %3 = alloca %struct.fdc_data*, align 8
  %4 = alloca i8*, align 8
  store %struct.fdc_data* %0, %struct.fdc_data** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.fdc_data*, %struct.fdc_data** %3, align 8
  %6 = getelementptr inbounds %struct.fdc_data, %struct.fdc_data* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = add nsw i64 %7, 1
  store i64 %8, i64* %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %36

11:                                               ; preds = %2
  %12 = load %struct.fdc_data*, %struct.fdc_data** %3, align 8
  %13 = getelementptr inbounds %struct.fdc_data, %struct.fdc_data* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @FDC_ERRMAX, align 8
  %16 = icmp slt i64 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %11
  %18 = load %struct.fdc_data*, %struct.fdc_data** %3, align 8
  %19 = getelementptr inbounds %struct.fdc_data, %struct.fdc_data* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 (i32, i8*, ...) @device_printf(i32 %20, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %21)
  br label %35

23:                                               ; preds = %11
  %24 = load %struct.fdc_data*, %struct.fdc_data** %3, align 8
  %25 = getelementptr inbounds %struct.fdc_data, %struct.fdc_data* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @FDC_ERRMAX, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %34

29:                                               ; preds = %23
  %30 = load %struct.fdc_data*, %struct.fdc_data** %3, align 8
  %31 = getelementptr inbounds %struct.fdc_data, %struct.fdc_data* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = call i32 (i32, i8*, ...) @device_printf(i32 %32, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  br label %34

34:                                               ; preds = %29, %23
  br label %35

35:                                               ; preds = %34, %17
  br label %36

36:                                               ; preds = %35, %2
  ret i32 1
}

declare dso_local i32 @device_printf(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
